[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/LogoTextTheme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/ButtonTextTheme.tres" type="Theme" id=2]
[ext_resource path="res://Themes/ButtonTheme.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/ButtonExitOverTheme.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/ButtonEnterOverTheme.tres" type="StyleBox" id=5]
[ext_resource path="res://Themes/ButtonOptionsOverTheme.tres" type="StyleBox" id=6]
[ext_resource path="res://Photos/Background.png" type="Texture" id=7]
[ext_resource path="res://Scripts/ChangeScene.gd" type="Script" id=8]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1352.0
margin_bottom = 674.0
alignment = 1

[node name="Background" type="Sprite" parent="HBoxContainer"]
position = Vector2( 615.695, 296.253 )
scale = Vector2( 1.58672, 0.947954 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1232.0
margin_bottom = 594.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_left = 453.0
margin_right = 778.0
margin_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 325.0
margin_bottom = 100.0
theme = ExtResource( 1 )
text = "IT'S DARK..."
align = 1

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 700.0
margin_bottom = 421.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 0
size_flags_vertical = 2
size_flags_stretch_ratio = 2.29
custom_constants/separation = 20
alignment = 1

[node name="Enter" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
show_behind_parent = true
margin_right = 306.0
margin_bottom = 66.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Enter"
align = 0
script = ExtResource( 8 )

[node name="Options" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 86.0
margin_right = 331.0
margin_bottom = 152.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/normal = ExtResource( 3 )
text = "Options"
align = 0
script = ExtResource( 8 )

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 172.0
margin_right = 275.0
margin_bottom = 238.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Exit"
align = 0
script = ExtResource( 8 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Enter" to="HBoxContainer/VBoxContainer/MenuOptions/Enter" method="_on_Enter_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="HBoxContainer/VBoxContainer/MenuOptions/Enter" method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Exit" to="HBoxContainer/VBoxContainer/MenuOptions/Enter" method="_on_Exit_pressed"]
