[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/LogoTextTheme.tres" type="Theme" id=1]
[ext_resource path="res://Photos/Background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://Themes/ButtonTextTheme.tres" type="Theme" id=4]
[ext_resource path="res://Themes/ButtonTheme.tres" type="StyleBox" id=5]
[ext_resource path="res://Themes/ButtonExitOverTheme.tres" type="StyleBox" id=6]
[ext_resource path="res://Scripts/ChangeScene.gd" type="Script" id=7]

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 736.564, 374.948 )
scale = Vector2( 1.59014, 0.947954 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 436.0
margin_top = 240.0
margin_right = 1036.0
margin_bottom = 514.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VolumeTitle" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 193.0
margin_bottom = 100.0
size_flags_horizontal = 0
theme = ExtResource( 1 )
text = "Music"

[node name="Music" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_top = 42.0
margin_right = 600.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = -24.0
max_value = 0.0
value = -19.0
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 204.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="SFXTitle" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 100.0
size_flags_horizontal = 0
theme = ExtResource( 1 )
text = "Sfx"

[node name="SFX" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_top = 42.0
margin_right = 600.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
min_value = -24.0
max_value = 0.0
rounded = true

[node name="OptionExit" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 275.0
margin_bottom = 274.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "EXIT"
script = ExtResource( 7 )
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/Music" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="VBoxContainer/OptionExit" to="VBoxContainer/OptionExit" method="_on_OptionExit_pressed"]
